Rename dockerfiles and add uwb_ros2 as a submodule.

--- a/Dockerfile_ros2
+++ b/Dockerfile_ros2
@@ -1,4 +1,5 @@
-FROM osrf/ros:melodic-desktop
+# syntax=docker/dockerfile:experimental
+FROM osrf/ros:humble-desktop
 
 SHELL ["bin/bash", "-c"]
 
@@ -20,17 +21,19 @@ RUN pip3 install numpy \
                  empy \
                  genpy
 
-RUN echo "source /opt/ros/melodic/setup.bash" >> ~/.bashrc
+RUN echo "source /opt/ros/humble/setup.bash" >> ~/.bashrc
 
-RUN mkdir -p catkin_ws/src
-COPY ./uwb_ros /catkin_ws/src/uwb_ros
-RUN source /opt/ros/melodic/setup.bash \
-    && cd catkin_ws \
-    && catkin_make -DPYTHON_EXECUTABLE=/usr/bin/python3
-RUN mkdir -p catkin_ws/src/uwb_ros
-
-RUN echo "source ./catkin_ws/devel/setup.bash" >> ~/.bashrc
-
+RUN mkdir -p src/uwb_interface
 COPY ./uwb_interface /src/uwb_interface
+
+RUN mkdir -p /ros2_ws/src
+COPY ./uwb_ros2/uwb_driver /ros2_ws/src/uwb_ros2/uwb_driver
+COPY ./uwb_ros2/uwb_msgs /ros2_ws/src/uwb_ros2/uwb_msgs
+
+RUN source /opt/ros/humble/setup.bash \
+    && cd /ros2_ws \
+    && colcon build --symlink-install
+RUN echo "source /ros2_ws/install/setup.bash" >> ~/.bashrc
+
 RUN cd /src/uwb_interface && pip3 install -e .
 
