--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "uwb_ros2"]
 	path = uwb_ros2
 	url = git@github.com:CharlesCossette/uwb_ros2.git
+[submodule "uwb_ros"]
+	path = uwb_ros
+	url = git@bitbucket.org:decargroup/uwb_ros.git
+[submodule "uwb_interface"]
+	path = uwb_interface
+	url = git@bitbucket.org:decargroup/uwb_interface.git
