--- a/Dockerfile_ros1
+++ b/Dockerfile_ros1
@@ -35,3 +35,4 @@ RUN echo "source ./catkin_ws/devel/setup.bash" >> ~/.bashrc
 COPY ./uwb_interface /src/uwb_interface
 RUN cd /src/uwb_interface && pip3 install -e .
 
+CMD ["bash", "-c", "source /opt/ros/melodic/setup.bash && source /catkin_ws/devel/setup.bash && roslaunch uwb_ros uwb.launch"]
