--- a/Dockerfile_ros2
+++ b/Dockerfile_ros2
@@ -37,3 +37,5 @@ RUN echo "source /ros2_ws/install/setup.bash" >> ~/.bashrc
 
 RUN cd /src/uwb_interface && pip3 install -e .
 
+CMD ["bash", "-c", "source /ros2_ws/install/setup.bash && ros2 run uwb_driver uwb_node"]
+
